<resources>
    <string name="app_name">CloudClient</string>
    <string name="cloud_client">Awesome</string>
    <string name="toggle_darkmode">Toggle darkmode</string>
    <!--Info -->
    <string name="info">Info</string>
    <string name="info_title">Welcome</string>
    <string name="info_info">This app is made as a part of a project in DA376C Development for the cloud.</string>
    <string name="info_authors">Develpers involved -> Christian, Oskar, Elianus und Filipovic</string>

    <!--Register -->
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>

    <!--Login-->
    <string name="login">Login</string>

    <!--Menu-->
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="placeholder">Place holder</string>
    <!--Login-->
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="upload_to_cloud">Upload to cloud</string>
    <string name="title_text">Google SignIn</string>
    <string name="signed_in_fmt">Signed in as: %s</string>

    <string name="help_main">If you ever find yourself in doubt what to do next on every page you have a helpbutton in
    the top right corner press this and you will receive guidelines on how to interact with the application.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="ok">OK</string>
</resources>
