<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_placeholder"
        android:title="@string/placeholder"
        />
    <item
        android:title="@string/user">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"
                />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_account"
                android:title="@string/logout"
                />
        </menu>
    </item>

    <item
        android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about"
                />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"
                />
        </menu>
    </item>
</menu>