<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTxtViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/info"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/layout_border_round"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/info_title"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/info_info"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/layout_border_round"
        android:padding="5dp"
        android:text="@string/info_authors"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>