<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/registerToolbar"
        layout="@layout/toolbar_layout"/>


    <EditText
        android:id="@+id/regUserNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:layout_marginTop="100dp"
        android:layout_marginStart="90dp"
        android:padding="5dp"
        android:background="@drawable/layout_border_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerToolbar"
        />

    <EditText
        android:id="@+id/regEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:padding="5dp"
        android:background="@drawable/layout_border_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regUserNameEditText"/>

    <EditText
        android:id="@+id/regFirstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:padding="5dp"
        android:background="@drawable/layout_border_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regEmailEditText"/>

    <EditText
        android:id="@+id/regLastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:padding="5dp"
        android:background="@drawable/layout_border_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regFirstNameEditText"/>

    <EditText
        android:id="@+id/regPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:padding="5dp"
        android:background="@drawable/layout_border_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regLastNameEditText"/>

    <EditText
        android:id="@+id/regConfirmPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:padding="5dp"
        android:background="@drawable/layout_border_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regPasswordEditText"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        android:background="@drawable/layout_border_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regConfirmPasswordEditText"/>


</androidx.constraintlayout.widget.ConstraintLayout>