<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/cloud"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginLayout"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="26dp"
            android:layout_toEndOf="@id/app_logo"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/cloud_client"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_logo"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/user_name"
                    app:boxStrokeColor="@color/bg2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginUserNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/layout_border_round"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="2dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/bg2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/layout_border_round"
                        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:padding="2dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameLayout"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:text="@string/login" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/registerBtn"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <include
            android:id="@+id/loginToolbar"
            layout="@layout/toolbar_layout"/>
    </RelativeLayout>
</RelativeLayout>